# anscer_task

./: CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml  view_bot.rviz
description/: camera.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
maps/: warehouse_save.pgm  warehouse_save.yaml  warehouse_serial.data
src/: trajectory_publisher.cpp  trajectory_reader.cpp
srv/: SaveTrajectory.srv
worlds/: industrial-warehouse.sdf
